--- a/src/build.gradle
+++ b/src/build.gradle
@@ -47,7 +47,7 @@ project(":desktop") {
         implementation project(":core")
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-        
+        implementation 'com.google.code.gson:gson:2.10.1'
     }
 }
 
@@ -57,6 +57,6 @@ project(":core") {
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
-        
+        implementation 'com.google.code.gson:gson:2.10.1'
     }
 }
