--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ hs_err_pid*
 gwt-unitCache/
 www-test/
 .gwt-tmp/
+**/compileJava/*
 
 ## Android Studio and Intellij and Android in general
 /android/libs/armeabi-v7a/
